Fix z-index for utterances

--- a/assets/style.css
+++ b/assets/style.css
@@ -267,6 +267,7 @@ footer span:last-child:after {
 
 #post header {
   position: fixed;
+  z-index: 1;
   top: 0;
   right: 0;
   left: 0;
@@ -333,6 +334,10 @@ footer span:last-child:after {
   content: "❦";
   color: gray;
   text-align: center;
+}
+
+.utterances {
+  z-index: 0;
 }
 
 #toc main {
